force-app/main/default/objects/Transfer__c/Transfer__c.object-meta.xml
<CustomObject>
    <label>Transfer</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>