force-app/main/default/objects/Transfer__c/fields/Cash__c.field-meta.xml
<CustomField>
    <fullName>Cash__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cash</label>
    <type>Checkbox</type>
</CustomField>