force-app/main/default/objects/Transfer__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From</label>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Transfers</relationshipLabel>
    <relationshipName>Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>