force-app/main/default/objects/Transfer__c/fields/FromAccount__c.field-meta.xml
<CustomField>
    <fullName>FromAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Account</label>
    <referenceTo>B_D_Account__c</referenceTo>
    <relationshipLabel>Transfers</relationshipLabel>
    <relationshipName>Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>