force-app/main/default/objects/Transfer__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To</label>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Transfers (To)</relationshipLabel>
    <relationshipName>Transfers1</relationshipName>
    <type>Lookup</type>
</CustomField>