force-app/main/default/objects/Transfer__c/fields/ToAccount__c.field-meta.xml
<CustomField>
    <fullName>ToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Account</label>
    <referenceTo>B_D_Account__c</referenceTo>
    <relationshipLabel>Transfers (To Account)</relationshipLabel>
    <relationshipName>Transfers1</relationshipName>
    <type>Lookup</type>
</CustomField>