force-app/main/default/objects/Transfer__c/fields/Transaction_method__c.field-meta.xml
<CustomField>
    <fullName>Transaction_method__c</fullName>
    <label>Transaction method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash Transfer</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
            <value>
                <fullName>Stock Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>